[Feat] Comment 필터링 기능 추가